2006-02-05  Stefan Jahn  <stefan@lkcc.org>

	* nasolver.cpp: Implemented possibility to save probe data
	into the current dataset.

	* dataset.cpp (load_touchstone): Fixed segfault bug when two
	or more S-parameter touchstone file containers are to be
	simulated.

	* scan_netlist.l: Accepting signed real values in equations.
	This saves some computation effort.

	* parse_netlist.y: The equation parser (part of netlist
	parser) now creates an appropriate range instance.

	* range.h (class range): New class implementing a value
	range including upper and lower boundary specifications.

	* evaluate.cpp: Implemented new functions: xvalue(), yvalue()
	and min(), max() and avg() using range specification.

	* equation.cpp: Added new function returning a data vector
	from th dataset according to the given name.

2006-01-29  Stefan Jahn  <stefan@lkcc.org>

	* spsolver.cpp: Moved saveVariable() to analysis class.
	(saveCharacteristics): Saving characteristic values into
	dataset.  New properties: saveCVs, saveAll.

	* object.cpp: getScaledProperty() falls back to
	getPropertyDouble() if there is no such scaled property.

	* nasolver.cpp: Moved saveVariable() to analysis class.

	* circuit.cpp: Implemented necessary functions for the
	characteristic values.

	* characteristic.h (class characteristic): New class for
	storing characteristic values (very likely operating points).

	* analysis.cpp (saveVariable): Moved this function from the
	nasolver and spsolver class here.

2006-01-08  Stefan Jahn  <stefan@lkcc.org>

	* pair.h (class pair): New class implementing a key/value
	pair.

	* operatingpoint.cpp: Simplified the operating point class
	accordingly.

	* circuit.cpp: Using the new valuelist class to manage
	operating points of components.

	* valuelist.h (class valuelist): New template class
	implementing a key/value list.

2005-12-18  Stefan Jahn  <stefan@lkcc.org>

	* qucsdefs.h (qucs_definition_available): Added temperature